--- a/tox.ini
+++ b/tox.ini
@@ -12,18 +12,19 @@
 
 [tox] #-------------------------------------------------------------------
 
-envlist = reset,py27,py33,py34,pypy,stats,check
+envlist = reset,py27,py33,py34,pypy,check
 skip_missing_interpreters = True
 
 [testenv] #---------------------------------------------------------------
 
 commands =
-    coverage run --append --omit='.eggs/*,tests/*,*/site-packages/*,*/distutils/*,*/lib_pypy/*' setup.py test -q
+    coverage run --append -m unittest {posargs:discover}
 
 deps =
     coverage
 
 passenv =
+    COVERAGE_PROCESS_START
     _TXSOCKETIO_LOG_LVL
 
 setenv =
@@ -34,26 +35,34 @@ setenv =
 basepython = python
 
 commands =
+    coverage report
+    coverage html
     python setup.py check -m -r -s -v
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
 
 deps =
+    coverage
     sphinx
+
+usedevelop = True
 
 [testenv:dev] #-----------------------------------------------------------
 
-basepython = pypy
 commands =
 envdir = .venv-dev
 usedevelop = True
 
 [testenv:reset] #---------------------------------------------------------
 
+basepython = python
+
 commands =
     coverage erase
+    rm -frv tests/node/node_modules
+    sh -c 'cd tests/node && npm install'
 
-[testenv:stats] #---------------------------------------------------------
+skip_install = true
 
-commands =
-    coverage report
-    coverage html
+whitelist_externals =
+    rm
+    sh
