--- a/integrations/node/.npmignore
+++ b/integrations/node/.npmignore
@@ -1,4 +1,4 @@
-#-*- encoding: utf-8; mode: ini -*-
+#-*- encoding: utf-8 -*-
 
 #=========================================================================
 # Copyright (c) 2015 Matt Bogosian <mtb19@columbia.edu>.
@@ -10,15 +10,5 @@
 # software in any capacity.
 #=========================================================================
 
-[run] #-------------------------------------------------------------------
-
-omit =
-    .eggs/*
-    .tox/*
-    *.c
-    */distutils/*
-    */lib_pypy/*
-    */site-packages/*
-    integrations/*
-    tests/*
-    txsocketio/tls.py
+node-daemon.*
+package.json
