--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-#-*-mode: ini; encoding: utf-8-*-
+#-*- encoding: utf-8; mode: ini -*-
 
 #=========================================================================
 # Copyright (c) 2015 Matt Bogosian <mtb19@columbia.edu>.
@@ -21,48 +21,49 @@ commands =
     coverage run --append -m unittest {posargs:discover}
 
 deps =
+    {env:CRYPTOGRAPHY:}
+    {env:OPENSSL:}
+    {env:TWISTED:Twisted}
     coverage
 
-passenv =
-    COVERAGE_PROCESS_START
-    _TXSOCKETIO_LOG_LVL
+passenv = COVERAGE_PROCESS_START _TXSOCKETIO_LOG_LVL
 
 setenv =
     PYTHONWARNINGS = all
 
 [testenv:check] #---------------------------------------------------------
 
-basepython = python
+basepython = {env:PYTHON:python}
 
 commands =
-    coverage report
-    coverage html
+    -coverage report
+    -coverage html
+    pylint --rcfile=.pylintrc txsocketio tests integrations/tests
     python setup.py check -m -r -s -v
+    rm -frv docs/modules.rst docs/txsocketio.rst docs/txsocketio.*.rst
+    sphinx-apidoc -o docs --separate txsocketio
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
 
 deps =
+    {env:TWISTED:Twisted}
     coverage
+    debug
+    pylint
+    readline
+    repoze.sphinx.autointerface
     sphinx
 
+setenv =
+    PYTHONWARNINGS =
+
 usedevelop = True
-
-[testenv:dev] #-----------------------------------------------------------
-
-commands =
-envdir = .venv-dev
-usedevelop = True
-
-[testenv:reset] #---------------------------------------------------------
-
-basepython = python
-
-commands =
-    coverage erase
-    rm -frv tests/node/node_modules
-    sh -c 'cd tests/node && npm install'
-
-skip_install = true
 
 whitelist_externals =
     rm
-    sh
+
+[testenv:reset] #---------------------------------------------------------
+
+commands =
+    coverage erase
+
+skip_install = true
