--- a/.travis.yml
+++ b/.travis.yml
@@ -20,38 +20,54 @@ install:
 # without a fix
 env:
     - TOX_ENV=py27 TWISTED='Twisted == 15.3'
+    - TOX_ENV=py27 TWISTED='Twisted == 15.3' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
     - TOX_ENV=py27 TWISTED='Twisted == 15.4'
+    - TOX_ENV=py27 TWISTED='Twisted == 15.4' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
     - TOX_ENV=py27 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
-
-    - TOX_ENV=py27 OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography TWISTED='Twisted == 15.3'
-    - TOX_ENV=py27 OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography TWISTED='Twisted == 15.4'
-    - TOX_ENV=py27 OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+    - TOX_ENV=py27 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
 
     - TOX_ENV=pypy TWISTED='Twisted == 15.3'
+    - TOX_ENV=pypy TWISTED='Twisted == 15.3' OPENSSL=pyOpenSSL CRYPTOGRAPHY='cryptography < 1.0'
     - TOX_ENV=pypy TWISTED='Twisted == 15.4'
+    - TOX_ENV=pypy TWISTED='Twisted == 15.4' OPENSSL=pyOpenSSL CRYPTOGRAPHY='cryptography < 1.0'
     - TOX_ENV=pypy TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+    - TOX_ENV=pypy TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk OPENSSL=pyOpenSSL CRYPTOGRAPHY='cryptography < 1.0'
 
-    - TOX_ENV=pypy OPENSSL=pyOpenSSL CRYPTOGRAPHY='cryptography < 1.0' TWISTED='Twisted == 15.3'
-    - TOX_ENV=pypy OPENSSL=pyOpenSSL CRYPTOGRAPHY='cryptography < 1.0' TWISTED='Twisted == 15.4'
-    - TOX_ENV=pypy OPENSSL=pyOpenSSL CRYPTOGRAPHY='cryptography < 1.0' TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+    - TOX_ENV=py33 TWISTED='Twisted == 15.3'
+    - TOX_ENV=py33 TWISTED='Twisted == 15.3' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
+    - TOX_ENV=py33 TWISTED='Twisted == 15.4'
+    - TOX_ENV=py33 TWISTED='Twisted == 15.4' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
+    - TOX_ENV=py33 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+    - TOX_ENV=py33 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
+
+    - TOX_ENV=py34 TWISTED='Twisted == 15.3'
+    - TOX_ENV=py34 TWISTED='Twisted == 15.3' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
+    - TOX_ENV=py34 TWISTED='Twisted == 15.4'
+    - TOX_ENV=py34 TWISTED='Twisted == 15.4' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
+    - TOX_ENV=py34 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+    - TOX_ENV=py34 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
 
 matrix:
     allow_failures:
-        - env: TOX_ENV=py33 TWISTED='Twisted == 15.3'
-        - env: TOX_ENV=py33 TWISTED='Twisted == 15.4'
-        - env: TOX_ENV=py33 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+        - env: TOX_ENV=py27 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+        - env: TOX_ENV=py27 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
 
-        - env: TOX_ENV=py33 OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography TWISTED='Twisted == 15.3'
-        - env: TOX_ENV=py33 OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography TWISTED='Twisted == 15.4'
-        - env: TOX_ENV=py33 OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+        - env: TOX_ENV=pypy TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+        - env: TOX_ENV=pypy TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk OPENSSL=pyOpenSSL CRYPTOGRAPHY='cryptography < 1.0'
+
+        - env: TOX_ENV=py33 TWISTED='Twisted == 15.3'
+        - env: TOX_ENV=py33 TWISTED='Twisted == 15.3' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
+        - env: TOX_ENV=py33 TWISTED='Twisted == 15.4'
+        - env: TOX_ENV=py33 TWISTED='Twisted == 15.4' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
+        - env: TOX_ENV=py33 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+        - env: TOX_ENV=py33 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
 
         - env: TOX_ENV=py34 TWISTED='Twisted == 15.3'
+        - env: TOX_ENV=py34 TWISTED='Twisted == 15.3' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
         - env: TOX_ENV=py34 TWISTED='Twisted == 15.4'
+        - env: TOX_ENV=py34 TWISTED='Twisted == 15.4' OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
         - env: TOX_ENV=py34 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
-
-        - env: TOX_ENV=py34 OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography TWISTED='Twisted == 15.3'
-        - env: TOX_ENV=py34 OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography TWISTED='Twisted == 15.4'
-        - env: TOX_ENV=py34 OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+        - env: TOX_ENV=py34 TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk OPENSSL=pyOpenSSL CRYPTOGRAPHY=cryptography
 
 script:
     - tox -e "${TOX_ENV}"
