--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps =
     coverage
     hypothesis
 
-passenv = COVERAGE_PROCESS_START TEST_DEADLOCK TEST_INSIGHT _TXSOCKETIO_LOG_LVL
+passenv = COVERAGE_PROCESS_START TEST_INSIGHT _TXSOCKETIO_LOG_FMT _TXSOCKETIO_LOG_LVL
 
 setenv =
     PYTHONWARNINGS = all
@@ -43,7 +43,7 @@ basepython = {env:PYTHON:python}
 commands =
     -coverage report
     -coverage html
-    pylint --rcfile=.pylintrc txsocketio tests integrations/tests
+    pylint --rcfile=.pylintrc txsocketio tests
     python setup.py check -m -r -s -v
     rm -frv docs/modules.rst docs/txsocketio.rst docs/txsocketio.*.rst
     sphinx-apidoc -o docs --separate txsocketio
