Break out common utilities into `txrc` sub-module.

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ commands =
     coverage run --append -m unittest {posargs:discover}
 
 deps =
+    py{27,py}: mock
     twisted_15_3: Twisted >= 15.3.0, < 15.4.0
     twisted_15_4: Twisted >= 15.4.0, < 15.5.0
     twisted_trunk: svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
