--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
-# -*- encoding: utf-8 -*-
+# -*- encoding: utf-8; mode: ini -*-
 
 # ========================================================================
 # Copyright and other protections apply. Please see the accompanying
@@ -9,5 +9,10 @@
 # software in any capacity.
 # ========================================================================
 
-node-daemon.*
-package.json
+# See
+# <http://doc.pytest.org/en/latest/goodpractices.html#integrating-with-setuptools-python-setup-py-test-pytest-runner>
+[aliases]
+test=pytest
+
+[tool:pytest]
+addopts = --doctest-modules
