--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,30 @@
-#-*- encoding: utf-8 -*-
+# -*- encoding: utf-8 -*-
 
-#=========================================================================
-# Copyright (c) 2015 Matt Bogosian <mtb19@columbia.edu>.
-#
-# Please see the accompanying LICENSE (or LICENSE.txt) file for rights and
-# restrictions governing use of this software. All rights not expressly
-# waived or licensed are reserved. If such a file did not accompany this
-# software, then please contact the author before viewing or using this
+# =======================================================================
+# Copyright and other protections apply. Please see the accompanying
+# ``LICENSE`` and ``CREDITS`` files for rights and restrictions governing
+# use of this software. All rights not expressly waived or licensed are
+# reserved. If those files are missing or appear to be modified from their
+# originals, then please contact the author before viewing or using this
 # software in any capacity.
-#=========================================================================
+# ========================================================================
 
 # Various build/test entities
-__pycache__
+/.cache/
+/.coverage
+/.eggs/
+/.hypothesis/
+/.tox/
+/build/
+/dist/
+/docs/_build/
+/docs/_static/
+/htmlcov/
+__pycache__/
 _trial_temp
-.coverage
-.eggs
-.hypothesis
-.tox
-.venv
-.venv-*
-.virtualenv
 *_flymake.py
 *.egg
-*.egg-info
-build
-dist
-docs/_build
-docs/modules.rst
-docs/txsocketio.rst
-docs/txsocketio.*.rst
-htmlcov
+*.egg-info/
 
 # Compiled objects
 *.class
@@ -40,7 +35,7 @@ htmlcov
 *.py[co]
 *.so
 dropin.cache
-node_modules
+node_modules/
 
 # Packages
 *.7z
@@ -68,8 +63,8 @@ nohup.out
 .~*
 .DS_Store
 .DS_Store?
-.Spotlight-V100
-.Trashes
+.Spotlight-V100/
+.Trashes/
 desktop.ini
 ehthumbs.db
 Thumbs.db
