--- a/integrations/node/package.json
+++ b/integrations/node/package.json
@@ -1,12 +1,11 @@
 { "_": "-*- encoding: utf-8; grammar-ext: js; mode: js -*-",
 "_": [
-"Copyright (c) 2015 Matt Bogosian <mtb19@columbia.edu>.",
-
-"Please see the accompanying LICENSE (or LICENSE.txt) file for rights",
-"and restrictions governing use of this software. All rights not",
-"expressly waived or licensed are reserved. If such a file did not",
-"accompany this software, then please contact the author before viewing",
-"or using this software in any capacity."
+"Copyright and other protections apply. Please see the accompanying",
+"``LICENSE`` and ``CREDITS`` files for rights and restrictions governing",
+"use of this software. All rights not expressly waived or licensed are",
+"reserved. If those files are missing or appear to be modified from",
+"their originals, then please contact the author before viewing or using",
+"this software in any capacity."
 ],
 
     "name": "txsocketio-test",
