--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 # -*- encoding: utf-8; mode: ini -*-
 
-# =======================================================================
+# ========================================================================
 # Copyright and other protections apply. Please see the accompanying
 # ``LICENSE`` and ``CREDITS`` files for rights and restrictions governing
 # use of this software. All rights not expressly waived or licensed are
@@ -9,16 +9,10 @@
 # software in any capacity.
 # ========================================================================
 
-[run]  # -----------------------------------------------------------------
+# See
+# <http://doc.pytest.org/en/latest/goodpractices.html#integrating-with-setuptools-python-setup-py-test-pytest-runner>
+[aliases]
+test=pytest
 
-omit =
-    .eggs/*
-    .hypothesis/*
-    .tox/*
-    *.c
-    */distutils/*
-    */lib_pypy/*
-    */site-packages/*
-    integrations/*
-    tests/*
-    txsocketio/tls.py
+[tool:pytest]
+addopts = --doctest-modules
