--- a/tox.ini
+++ b/tox.ini
@@ -1,79 +1,122 @@
-#-*- encoding: utf-8; mode: ini -*-
+# -*- encoding: utf-8; mode: ini -*-
 
-#=========================================================================
-# Copyright (c) 2015 Matt Bogosian <mtb19@columbia.edu>.
-#
-# Please see the accompanying LICENSE (or LICENSE.txt) file for rights and
-# restrictions governing use of this software. All rights not expressly
-# waived or licensed are reserved. If such a file did not accompany this
-# software, then please contact the author before viewing or using this
+# ========================================================================
+# Copyright and other protections apply. Please see the accompanying
+# ``LICENSE`` and ``CREDITS`` files for rights and restrictions governing
+# use of this software. All rights not expressly waived or licensed are
+# reserved. If those files are missing or appear to be modified from their
+# originals, then please contact the author before viewing or using this
 # software in any capacity.
-#=========================================================================
+# ========================================================================
 
-[tox] #-------------------------------------------------------------------
+[tox]  # -----------------------------------------------------------------
 
-envlist = reset,py{27,py}-twisted_{15_3,15_4,_trunk}-ssl_{yes,no},py{33,34}-twisted_trunk-ssl_{yes,no},check
-skip_missing_interpreters = True
+envlist = py{27,33,34,35,36,py,py3}-twisted_{16,17_1,trunk}-ssl_{no,yes}, lint, check
+skip_missing_interpreters = true
 
-[testenv] #---------------------------------------------------------------
+[travis]  # --------------------------------------------------------------
+
+python =
+    2.7: py27, lint
+    3.3: py33, lint
+    3.4: py34, lint
+    3.5: py35, lint, check
+    3.6: py36, lint
+    pypy: pypy, lint
+    pypy3: pypy3, lint
+
+[travis:env]  # ----------------------------------------------------------
+
+TWISTED =
+    16: twisted_16
+    17.1: twisted_17_1, lint, check
+    trunk: twisted_trunk
+
+SSL =
+    no: ssl_no, lint, check
+    yes: ssl_yes
+
+[testenv]  # -------------------------------------------------------------
 
 commands =
-    coverage run --append -m unittest {posargs:discover}
+    coverage run --append -m py.test {posargs}
 
 deps =
     py{27,py}: mock
-    twisted_15_3: Twisted >= 15.3.0, < 15.4.0
-    twisted_15_4: Twisted >= 15.4.0, < 15.5.0
-    twisted_trunk: svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
-    py{27,33,34}-ssl_yes: cryptography
-    pypy-ssl_yes: cryptography < 1.0
+    twisted_16_0: Twisted >= 16.0.0, < 16.7.0
+    twisted_17_1: Twisted >= 17.1.0, < 17.2.0
+    twisted_trunk: git+https://github.com/twisted/twisted.git@trunk
+    ssl_yes: cryptography
     ssl_yes: pyOpenSSL
     ssl_yes: service_identity
     coverage
-    hypothesis
+    pytest
+    # This probably breaks on Windows. See
+    # <https://github.com/tox-dev/tox/issues/384>.
+    -rtest/requirements.txt
 
-passenv = COVERAGE_PROCESS_START TEST_INSIGHT _TXSOCKETIO_LOG_FMT _TXSOCKETIO_LOG_LVL
+passenv =
+    COVERAGE_PROCESS_START
+    LOG_FMT
+    LOG_LVL
+    TEST_INSIGHT
 
 setenv =
     PYTHONWARNINGS = all
 
-[testenv:check] #---------------------------------------------------------
+[testenv:check]  # -------------------------------------------------------
+
+basepython = {env:PYTHON:python}
+
+commands =
+    python setup.py check -m -r -s -v
+    rm -frv docs/_build docs/_static docs/modules.rst docs/txsocketio.rst docs/txsocketio.*.rst
+    sphinx-apidoc -o docs --separate txsocketio
+    {toxinidir}/helpers/checkmodified.sh
+    mkdir -p docs/_static
+    make -C docs html
+
+deps =
+    docutils
+    sphinx
+    # This probably breaks on Windows. See
+    # <https://github.com/tox-dev/tox/issues/384>.
+    -rdocs/requirements.txt
+
+setenv =
+    PYTHONWARNINGS =
+
+skip_install = true
+
+whitelist_externals =
+    make
+    mkdir
+    rm
+
+[testenv:lint]  # --------------------------------------------------------
 
 basepython = {env:PYTHON:python}
 
 commands =
     -coverage report
     -coverage html
-    pylint --rcfile=.pylintrc txsocketio tests
-    python setup.py check -m -r -s -v
-    rm -frv docs/modules.rst docs/txsocketio.rst docs/txsocketio.*.rst
-    sphinx-apidoc -o docs --separate txsocketio
-    sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
+    flake8 txsocketio test setup.py
+    pylint --rcfile=.pylintrc txsocketio test setup.py
 
 deps =
-    Twisted
     coverage
-    debug
-    hypothesis
+    flake8
     pylint
-    readline
-    repoze.sphinx.autointerface
-    sphinx
+    # This probably breaks on Windows. See
+    # <https://github.com/tox-dev/tox/issues/384>.
+    -rtest/requirements.txt
 
 setenv =
     PYTHONWARNINGS =
 
-usedevelop = True
+use_develop = true
 
-whitelist_externals =
-    rm
+[flake8]  # --------------------------------------------------------------
 
-[testenv:reset] #---------------------------------------------------------
-
-commands =
-    coverage erase
-
-deps =
-    coverage
-
-skip_install = true
+ignore = E128,E201,E202,E302,E305,E501,W503
+# max-line-length = 0
