--- a/tox.ini
+++ b/tox.ini
@@ -11,14 +11,13 @@
 
 [tox]  # -----------------------------------------------------------------
 
-envlist = py{27,33,34,35,36,py,py3}-twisted_{16,17_1,trunk}-ssl_{no,yes}, lint, check
+envlist = py{27,34,35,36,py,py3}-twisted_{16,17_1,17_5,17_9,trunk}-ssl_{no,yes}, lint, check
 skip_missing_interpreters = true
 
 [travis]  # --------------------------------------------------------------
 
 python =
     2.7: py27, lint
-    3.3: py33, lint
     3.4: py34, lint
     3.5: py35, lint, check
     3.6: py36, lint
@@ -30,6 +29,8 @@ python =
 TWISTED =
     16: twisted_16
     17.1: twisted_17_1, lint, check
+    17.5: twisted_17_5, lint, check
+    17.9: twisted_17_9, lint, check
     trunk: twisted_trunk
 
 SSL =
@@ -45,6 +46,8 @@ deps =
     py{27,py}: mock
     twisted_16_0: Twisted >= 16.0.0, < 16.7.0
     twisted_17_1: Twisted >= 17.1.0, < 17.2.0
+    twisted_17_5: Twisted >= 17.5.0, < 17.6.0
+    twisted_17_9: Twisted >= 17.9.0, < 17.10.0
     twisted_trunk: git+https://github.com/twisted/twisted.git@trunk
     ssl_yes: cryptography
     ssl_yes: pyOpenSSL
@@ -106,7 +109,7 @@ commands =
 deps =
     coverage
     flake8
-    pylint
+    pylint >= 1.7.0
     # This probably breaks on Windows. See
     # <https://github.com/tox-dev/tox/issues/384>.
     -rtest/requirements.txt
@@ -114,9 +117,12 @@ deps =
 setenv =
     PYTHONWARNINGS =
 
-use_develop = true
+usedevelop = true
 
 [flake8]  # --------------------------------------------------------------
 
+# See
+# <https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes>
+# and <https://flake8.readthedocs.io/en/latest/user/error-codes.html>
 ignore = E128,E201,E202,E302,E305,E501,W503
 # max-line-length = 0
